Merged revisions 81692 via svnmerge from svn+ssh://pythondev@svn.python.org/python/trunk

........
  r81692 | martin.v.loewis | 2010-06-04 19:18:42 +0200 (Fr, 04 Jun 2010) | 3 lines

  Issue #8864: Define _XOPEN_SOURCE on Solaris for the
  multiprocessing module.
........